# aau_spo_ocaml

./: .gitignore  README.md  aau_spo_ocaml.opam  dune-project
lib/: dune
lib/arith/: arith.ml  arith_solution.ml  dune
test/: dune
